#96. Fix content shifting on security pages

--- a/assets/styles/auth.css
+++ b/assets/styles/auth.css
@@ -1,9 +1,5 @@
-html, body {
-    height: 100%;
-}
-
 .blockBody {
-    height: calc(100% - 66px); /* 66px is a toolbar height */
+    min-height: calc(100svh - 66px);
     display: flex;
     justify-content: center;
     align-items: center;
